# krico-backup

./: .gitignore  CMakeLists.txt  README.md
cmake/: Version.cmake  version.h.in
lib/: CMakeLists.txt
lib/include/krico/backup/: Backup.h  BackupConfig.h  BackupDirectory.h  BackupDirectoryId.h  BackupRepository.h  BackupRepositoryLog.h  BackupRunner.h  BackupSummary.h  Digest.h  Directory.h  FileLock.h  LogEntryType.h  TemporaryDirectory.h  TemporaryFile.h  exception.h  io.h  log_records.h  os.h  records.h  settings.h  uint8_utils.h
lib/src/: Backup.cpp  BackupConfig.cpp  BackupDirectory.cpp  BackupDirectoryId.cpp  BackupRepository.cpp  BackupRepositoryLog.cpp  BackupRunner.cpp  BackupSummary.cpp  Digest.cpp  Directory.cpp  FileLock.cpp  TemporaryDirectory.cpp  TemporaryFile.cpp  io.cpp  log_records.cpp  os.cpp  records.cpp  settings.cpp
lib/tests/: BackupConfigTest.cpp  BackupDirectoryIdTest.cpp  BackupDirectoryTest.cpp  BackupRepositoryLogTest.cpp  BackupRepositoryTest.cpp  BackupRunnerTest.cpp  BackupTest.cpp  CMakeLists.txt  DigestTest.cpp  DirectoryTest.cpp  Environment.cpp  FileLockTest.cpp  TemporaryDirectoryTest.cpp  TemporaryFileTest.cpp  io_test.cpp  log_records_test.cpp  records_test.cpp  uint8_utils_test.cpp  version_test.cpp
main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  settings_test.cpp
